kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlip-app-service
spec:
  type: NodePort
  selector:
    app: mlip-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30007
